#6 style : tailwind 색상 변수 설정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,16 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #fffdfb;
+  --foreground: #00040b;
+  --color-border: #f1e7de;
+  --color-button-light: #fff8e6;
+  --color-button-dark: #c4a77f;
+  --color-card: #fdf6ee;
+  --color-header: #f2d8b2;
+  --color-text-title: #5f5013;
+  --color-text-muted: #a49787;
+  --color-text-base: #00040b;
 }
 
 @theme inline {
