#6 feat : Card 컴포넌트 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
   --color-card: #fdf6ee;
   --color-header: #f2d8b2;
   --color-text-title: #5f5013;
+  --color-text-subtitle: #c4a77f;
   --color-text-muted: #a49787;
   --color-text-base: #00040b;
   --header-height: 4rem;
