#6 feat : Button 컴포넌트 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
   --color-border: #f1e7de;
   --color-button-light: #fff8e6;
   --color-button-dark: #c4a77f;
+  --color-button-dark-hover: #b89f6c;
+  --color-button-light-hover: #fef4d9;
   --color-card: #fdf6ee;
   --color-header: #f2d8b2;
   --color-text-title: #5f5013;
