#6 feat : Button에 isRound 속성 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,8 @@
   --color-button-dark: #c4a77f;
   --color-button-dark-hover: #b89f6c;
   --color-button-light-hover: #fef4d9;
+  --color-button-sand: #f6ede5;
+  --color-button-sand-hover: #f0d8c4;
   --color-card: #fdf6ee;
   --color-header: #f2d8b2;
   --color-text-title: #5f5013;
