--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
   --color-button-dark-hover: #b89f6c;
   --color-button-light-hover: #fef4d9;
   --color-button-sand: #f6ede5;
-  --color-button-sand-hover: #f0d8c4;
+  --color-button-sand-hover: #f5e8dd;
   --color-card: #fdf6ee;
   --color-header: #f2d8b2;
   --color-text-title: #5f5013;
